lintian (2.5.41) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/cruft.{desc,pm}:
    + [BR] Filter some simple comments for long line in source-is-missing
      (Closes: #798900).
    + [BR] Detect pandoc docs avoiding source-is-missing warning.
    + [BR] Fix other source-is-missing FP. (Closes: #813013).
  * checks/files.pm:
    + [JW] Treat packages without Multi-Arch field as if they had
      "Multi-Arch: no".  Thanks to Bas Couwenberg for the bug report.

  * commands/lab-tool.pm:
    + [NT] New utility to handle most laboratory operations.

  * data/spelling/corrections:
    + [JW] Fix some corrections.
    + [JW] Add more corrections.

  * debian/{lintian.links,manpages,rules}:
    + [NT] Update to install the new lab-tool command.

  * frontend/lintian:
    + [NT] Remove -S, -R and -r, which are now supported in the new
      lintian-lab-tool command.

  * helper/coll/objdump-info-helper:
    + [NT] Avoid collecting unused information.

  * lib/Lintian/Path.pm:
    + [NT] Remove the _file_info cache field to avoid paying
      for all "file(1)" info twice.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Remove unnecessary values on members in the
      objdump_info table.
  * lib/Lintian/Processable*.pm:
    + [JW] Fix typos.
  * lib/Lintian/Tag/Override.pm:
    + [JW] Fix typo.

  * man/lintian-lab-tool.pod:
    + [NT] New file.

 -- Niels Thykier <niels@thykier.net>  Sun, 24 Jan 2016 12:58:06 +0000

lintian (2.5.40.2) unstable; urgency=medium

  * checks/cruft.pm:
    + [BR] Check package testsuite for license problems.
    + [BR] Allow multiple full texts for license problems.
    + [BR] Detect link copyright tag and warn in case of
      cc-by-nc-sa

  * data/spelling/corrections*:
    + [JW] Add more corrections.

  * debian/post{inst,rm}:
    + [NT] Remove obsolete maintainer scripts.
  * debian/tests/testsuite:
    + [NT] Remove temporary directory after test.

  * lib/Lintian/Collect/Source.pm:
    + [JW] Fix typo.